# Pink-Tax-Comparison

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_all.py
config/: pipeline_build_steps.json  pipeline_clean_steps.json  pipeline_steps.json
data/raw/: gender_model_cache.json  obf_cache.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: repair-babel-core.cjs
frontend/src/: App.jsx  styles.css
notebooks/: exploratory_data_analysis.ipynb
scripts/cleaning/: build_pair_observations.py  clean_pairs_dataset.py
scripts/pipeline/: reset_outputs.py  run_all_after_scraper_dryrun.py  run_pipeline.py
scripts/scraping/: scrape_amazon_india.py  scrape_amazon_japan.py  scrape_bigbasket.py  scrape_flipkart.py  scrape_rakuten_japan.py
src/pink_tax/: scraping_config.py  utils.py
src/pink_tax/scraping_utils/: currency.py  gender_labeler.py  normalize.py  pair_matcher.py
website/components/: app.js  index.html  styles.css
